--- a/src/index.html
+++ b/src/index.html
@@ -10,19 +10,20 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo"><a href="#">Portfo<span>lio</span></a>
+        <div class="max-width">
+        <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
         <ul class="menu">
             <li><a href="#">Home</a></li>
-            <li><a href="#">O mnie</a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
-            <li><a href="#"></a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Skills</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
         
         
         </div>
-
+    </div>
     </nav>
 
 
