--- a/src/index.html
+++ b/src/index.html
@@ -7,25 +7,39 @@
     <title>Emil Kowalczyk</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <nav class="navbar">
         <div class="max-width">
-        <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
-        <ul class="menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Skills</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-        
-        
+            <div class="logo"><a href="#">kowalczykemil<span>.pl</span></a></div>
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <div class="menu-btn">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
-    </div>
     </nav>
 
+    <!-- Home section-->
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Hello, my name is</div>
+                <div class="text-2">Emil Kowalczyk</div>
+                <div class="text-3">And I'm an <span>IT Student</span></div>
+                <a href="#">Hire me</a>
+            </div>
+        </div>
+    </section>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum soluta totam, eius quo, corrupti molestias est omnis provident ipsam, velit perferendis atque in necessitatibus veritatis. Nostrum eveniet, rem vero obcaecati atque accusamus asperiores. Eveniet veritatis aut adipisci in tempora alias, suscipit molestiae natus omnis nemo quidem dignissimos error commodi sunt qui quis libero quas quos fugit. Commodi corporis sequi, dolorum praesentium maxime eligendi quibusdam distinctio ducimus sint eum inventore nesciunt repudiandae quisquam molestiae nobis doloremque aliquam reiciendis ipsum! Amet at debitis nisi recusandae in accusantium tempora, maiores atque ad libero, nemo quaerat ipsum! Molestiae, deserunt veritatis! Vitae exercitationem nemo veritatis mollitia quia dolor eaque sed blanditiis animi ad odit officiis temporibus, quaerat, inventore sapiente officia incidunt earum delectus ea odio dolorem obcaecati minus? Reiciendis architecto optio odit ipsa ipsam blanditiis! Iusto odit temporibus mollitia aspernatur voluptatum iure asperiores quisquam, quod illum unde quia sed dignissimos officia blanditiis doloribus dicta possimus dolorum dolor. Iste vel officia itaque aperiam exercitationem obcaecati accusamus doloribus rerum assumenda sequi praesentium dolorem cumque, voluptatibus harum tempore est necessitatibus doloremque, minus provident voluptatum! In dolorem accusamus ducimus minus iusto, repellat, ratione autem error exercitationem fugiat, est eveniet commodi. Quam accusamus assumenda ipsam nostrum corrupti atque minima eaque.</p>
+    <script src="script.js"></script>
 </body>
 </html>
