About Me Section

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,23 @@
         </div>
     </section>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum soluta totam, eius quo, corrupti molestias est omnis provident ipsam, velit perferendis atque in necessitatibus veritatis. Nostrum eveniet, rem vero obcaecati atque accusamus asperiores. Eveniet veritatis aut adipisci in tempora alias, suscipit molestiae natus omnis nemo quidem dignissimos error commodi sunt qui quis libero quas quos fugit. Commodi corporis sequi, dolorum praesentium maxime eligendi quibusdam distinctio ducimus sint eum inventore nesciunt repudiandae quisquam molestiae nobis doloremque aliquam reiciendis ipsum! Amet at debitis nisi recusandae in accusantium tempora, maiores atque ad libero, nemo quaerat ipsum! Molestiae, deserunt veritatis! Vitae exercitationem nemo veritatis mollitia quia dolor eaque sed blanditiis animi ad odit officiis temporibus, quaerat, inventore sapiente officia incidunt earum delectus ea odio dolorem obcaecati minus? Reiciendis architecto optio odit ipsa ipsam blanditiis! Iusto odit temporibus mollitia aspernatur voluptatum iure asperiores quisquam, quod illum unde quia sed dignissimos officia blanditiis doloribus dicta possimus dolorum dolor. Iste vel officia itaque aperiam exercitationem obcaecati accusamus doloribus rerum assumenda sequi praesentium dolorem cumque, voluptatibus harum tempore est necessitatibus doloremque, minus provident voluptatum! In dolorem accusamus ducimus minus iusto, repellat, ratione autem error exercitationem fugiat, est eveniet commodi. Quam accusamus assumenda ipsam nostrum corrupti atque minima eaque.</p>
+   <!--About section start-->
+<section class="about" id="about">
+    <div class="max-width">
+        <h2 class="title">About me</h2>
+        <div class="about-content">
+            <div class="column left">
+                <img src="images/Koszula.png" alt="">
+            </div>
+            <div class="column right">
+                <div class="text">I'm Emil and I'm an <span>IT Student</span></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vero magnam doloremque, dolor voluptate odit mollitia architecto itaque repellendus? A quia omnis obcaecati iusto voluptas est in laborum natus, perspiciatis dolorum veritatis nesciunt veniam rerum mollitia enim, voluptates esse optio sint officia, ad alias amet. Iste cum, voluptatibus cumque ullam minima laboriosam illum eos! Nam harum sequi deserunt facere. Facere.</p>
+                <a href="#">Download CV</a>
+            </div>
+        </div>
+    </div>
+</section>
+
     <script src="script.js"></script>
 </body>
 </html>
