--- a/src/index.html
+++ b/src/index.html
@@ -55,6 +55,41 @@
         </div>
     </div>
 </section>
+ 
+<!--Services section start-->
+ <section class="services" id="services">
+    <div class="max-width">
+        <h2 class="title">My Services</h2>
+        <div class="serv-content">
+            <div class="card">
+                <div class="box">
+                    <i class="fas fa-chart-line"></i>
+                    <div class="text">Database Administration </div>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit neque possimus doloribus. Doloribus, voluptates perferendis.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <i class="fas fa-code"></i>
+                    <div class="text">Backend</div>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit neque possimus doloribus. Doloribus, voluptates perferendis.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <i class="fas fa-cogs""></i>
+                    <div class="text">System Administration </div>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit neque possimus doloribus. Doloribus, voluptates perferendis.</p>
+                </div>
+            </div>
+            </div>
+        </div>
+     </div>       
+    </div>
+    </div>
+</section>
+
+
 
     <script src="script.js"></script>
 </body>
