--- a/src/index.html
+++ b/src/index.html
@@ -89,7 +89,56 @@
     </div>
 </section>
 
-
+<!--Skills section-->
+<section class="skills" id="skills">
+    <div class="max-width">
+        <h2 class="title">My skills</h2>
+        <div class="skills-content">
+            <div class="column left">
+                <div class="text">My creative skills & expriences</div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi pariatur consequuntur nesciunt sed tempore accusantium, repellat atque magnam totam. Veniam eligendi doloremque enim accusantium tempora corporis error eveniet nihil laboriosam. Doloribus deleniti a animi. Voluptate fugit voluptatum, deleniti aspernatur esse alias, nostrum maxime molestias sit vero magni. Harum libero possimus id tempore fugit quod temporibus deserunt veritatis animi placeat!</p>
+                <a href="#">Read more</a>
+            </div>
+            <div class="column right">
+                <div class="bars">
+                    <div class="info">
+                        <span>Frontend [HTML5 | CSS3 | JS]</span>
+                        <span>50%</span>
+                    </div>
+                    <div class="line frontend"></div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>Backend [Java | Spring | Hibernate]</span>
+                        <span>80%</span>
+                    </div>
+                    <div class="line backend"></div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>Linux [Debian | Ubuntu | Fedora]</span>
+                        <span>70%</span>
+                    </div>
+                    <div class="line linux"></div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>Active Directory</span>
+                        <span>65%</span>
+                    </div>
+                    <div class="line ad"></div>
+                </div>
+                <div class="bars">
+                    <div class="info">
+                        <span>SQL [Oracle | MS SQL]</span>
+                        <span>70%</span>
+                    </div>
+                    <div class="line sql"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
     <script src="script.js"></script>
 </body>
