--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 </head>
 <body>
     <nav class="navbar">
@@ -134,6 +137,43 @@
                         <span>70%</span>
                     </div>
                     <div class="line sql"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!--Projects section-->
+<section class="projects" id="projects">
+    <div class="max-width">
+        <h2 class="title">My projects</h2>
+        <div class="carousel owl-carousel">
+            <div class="card">
+                <div class="box">
+                    <img src="images/Library1.png" alt="">
+                    <div class="text">Book rental</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <img src="images/car.png" alt="">
+                    <div class="text">Vehicle rental</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <img src="images/encrypt.png" alt="">
+                    <div class="text">Encryption application</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="box">
+                    <img src="images/xml.png" alt="">
+                    <div class="text">XML devices project</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </div>
             </div>
         </div>
