Footer Section + Scroll-up-btn

--- a/src/index.html
+++ b/src/index.html
@@ -13,16 +13,19 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
 </head>
 <body>
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">kowalczykemil<span>.pl</span></a></div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -37,7 +40,7 @@
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Emil Kowalczyk</div>
                 <div class="text-3">And I'm an <span>IT Student</span></div>
-                <a href="#">Hire me</a>
+                <a href="#contact">Hire me</a>
             </div>
         </div>
     </section>
@@ -237,6 +240,11 @@
         </div>
     </div>
 </section>
+
+<!--Footer section-->
+<footer>
+    <span>Created By <a href="#">Kowalczyk Emil</a> | <span class="far fa-copyright"></span> 2021 All rights reserved.</span>
+</footer>
 
     <script src="script.js"></script>
 </body>
