--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
@@ -39,7 +40,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
                 <div class="text-2">Emil Kowalczyk</div>
-                <div class="text-3">And I'm an <span>IT Student</span></div>
+                <div class="text-3">And I'm an <span class="typing"></span></div>
                 <a href="#contact">Hire me</a>
             </div>
         </div>
@@ -54,7 +55,7 @@
                 <img src="images/Koszula.png" alt="">
             </div>
             <div class="column right">
-                <div class="text">I'm Emil and I'm an <span>IT Student</span></div>
+                <div class="text">I'm Emil and I'm an <span class="typing-2"></span></div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vero magnam doloremque, dolor voluptate odit mollitia architecto itaque repellendus? A quia omnis obcaecati iusto voluptas est in laborum natus, perspiciatis dolorum veritatis nesciunt veniam rerum mollitia enim, voluptates esse optio sint officia, ad alias amet. Iste cum, voluptatibus cumque ullam minima laboriosam illum eos! Nam harum sequi deserunt facere. Facere.</p>
                 <a href="#">Download CV</a>
             </div>
