--- a/src/index.html
+++ b/src/index.html
@@ -56,8 +56,10 @@
             </div>
             <div class="column right">
                 <div class="text">I'm Emil and I'm an <span class="typing-2"></span></div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab vero magnam doloremque, dolor voluptate odit mollitia architecto itaque repellendus? A quia omnis obcaecati iusto voluptas est in laborum natus, perspiciatis dolorum veritatis nesciunt veniam rerum mollitia enim, voluptates esse optio sint officia, ad alias amet. Iste cum, voluptatibus cumque ullam minima laboriosam illum eos! Nam harum sequi deserunt facere. Facere.</p>
+                <p>I'm a third-year of IT student at the Technical University of Lodz.</p>
+                <p>I am interested in programming and databases. I took my first commercial steps in a hosting company, so I learned how to work with clients and gained practical knowledge of network and system administration.</p>
                 <a href="#">Download CV</a>
+                <span><a href="https://github.com/KowalczykEmil">Come to GitHub</a></span>
             </div>
         </div>
     </div>
@@ -72,21 +74,24 @@
                 <div class="box">
                     <i class="fas fa-chart-line"></i>
                     <div class="text">Database Administration </div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit neque possimus doloribus. Doloribus, voluptates perferendis.</p>
+                    <p>I enjoy database administration.</p>
+                      <p>I prefer Oracle databases, however I also had contact with MySQL and MSQL. Currently I am learning PL/SQL</p>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
                     <i class="fas fa-code"></i>
                     <div class="text">Backend</div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit neque possimus doloribus. Doloribus, voluptates perferendis.</p>
+                    <p>I am programming in JAVA language. So far I have created several applications, connected with databases.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
                     <i class="fas fa-cogs""></i>
                     <div class="text">System Administration </div>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit neque possimus doloribus. Doloribus, voluptates perferendis.</p>
+                    <p>I am familiar with Windows, I am also familiar with UNIX systems such as macOS and some Linux distributions.
+                    I am no stranger to the bash.
+                    </p>
                 </div>
             </div>
             </div>
@@ -103,7 +108,7 @@
         <div class="skills-content">
             <div class="column left">
                 <div class="text">My creative skills & expriences</div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nisi pariatur consequuntur nesciunt sed tempore accusantium, repellat atque magnam totam. Veniam eligendi doloremque enim accusantium tempora corporis error eveniet nihil laboriosam. Doloribus deleniti a animi. Voluptate fugit voluptatum, deleniti aspernatur esse alias, nostrum maxime molestias sit vero magni. Harum libero possimus id tempore fugit quod temporibus deserunt veritatis animi placeat!</p>
+                <p>I am a person who enjoys a challenge and adapts quickly to conditions. Metrics are a visual representation of the technologies I am most comfortable with. I am currently developing my programming skills by writing in JAVA, combining this with effective database learning. I prefer ORACLE databases, and am currently learning PL/SQL. I also enjoy managing operating systems, recently preferring UNIX systems due to the simplicity that their bash shell offers, while Windows is my primary system that I use on a daily basis. I've also had exposure to Windows Server, so Active Directory is not scary to me.</p>
                 <a href="#">Read more</a>
             </div>
             <div class="column right">
@@ -156,28 +161,29 @@
                 <div class="box">
                     <img src="images/Library1.png" alt="">
                     <div class="text">Book rental</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p>Project written in JAVA, connected with MySQL and using SWING.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
                     <img src="images/car.png" alt="">
                     <div class="text">Vehicle rental</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p>Vehicle rental application written in C++, without GUI and database.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
                     <img src="images/encrypt.png" alt="">
                     <div class="text">Encryption application</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p>Written in Java. Encrypting and decrypting with AES algorithm.</p>
                 </div>
             </div>
             <div class="card">
                 <div class="box">
                     <img src="images/xml.png" alt="">
                     <div class="text">XML devices project</div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                    <p>Electrical device data stored in XML.
+                        Various operations on XML files</p>
                 </div>
             </div>
         </div>
@@ -191,7 +197,10 @@
         <div class="contact-content">
             <div class="column left">
                 <div class="text">Get in Touch</div>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et distinctio quae saepe neque impedit libero molestiae, ex veritatis velit doloribus.</p>
+                <p>If you are interested, please email me. 
+                    I will consider all kinds of proposals, the most important is the development.</p>
+                    <p style="padding: 5px;"> </p>
+                    <p>Below are my details</p>
                 <div class="icons">
                     <div class="row">
                         <i class="fas fa-user"></i>
